--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <img class="main-title-image" src="img/intro-welcome.svg" width="1200" height="553" alt="Заставка Седоны">
     </section>
     <article class="about">
-      <h2 class="about-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p>Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
+      <h2 class="about-title-slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class = "about-title-text">Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
       <section class="about-reason">
         <h2 class="visually-hidden">Список причин</h2>
         <ol class="reason-list">
@@ -35,7 +35,7 @@
             <h3>
               <span class="reason-item-title">Настоящий городок</span>
             </h3>
-            <span class="reason-item-number">№1</span>
+            <span class="reason-item-number">- №1 -</span>
             <p class="reason-item-text">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
             <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
@@ -66,28 +66,28 @@
             <h3>
               <p class="reason-item-title">Там есть<br>мост дьявола</p>
             </h3>
-            <span class="reason-item-number">№2</span>
+            <span class="reason-item-number">- №2 -</span>
             <p class="reason-item-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
           <li class="reasons-item">
             <h3>
               <p class="reason-item-title">Небольшая площадь</p>
             </h3>
-            <span class="reason-item-number">№3</span>
+            <span class="reason-item-number">- №3 -</span>
             <p class="reason-item-text">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="reasons-item">
             <h3>
               <span class="reason-item-title">Красивая дорога</span>
             </h3>
-            <span class="reason-item-number">№4</span>
+            <span class="reason-item-number">- №4 -</span>
             <p class="reason-item-text">Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="reasons-item">
             <h3>
               <span class="reason-item-title">Мало туристов</span>
             </h3>
-            <span class="reason-item-number">№5</span>
+            <span class="reason-item-number">- №5 -</span>
             <p class="reason-item-text">Большинство едет в Гранд Коньон и толпится там</p>
           </li>
         </ol>
