--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>HTML Academy:Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="./css/normalize.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -14,7 +14,7 @@
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
       <ul class="header-navigation">
-        <li><a href="info.html">Информация</a></li>
+        <li><a class="header-navigation-info" href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
         <li><a class="hotel-current">Гостиницы</a></li>
@@ -89,35 +89,35 @@
           </a>
           <h3 class="catalog-item-title" Amara Resort & spa</h3>
           <span class="catalog-item-type"> Гостиница</span>
-          <span class="catalog-item price">От 4000 р.</span>
-          <a class="catalog-item-button" href="">Подробнее</a>
+          <span class="catalog-item-price">От 4000 р.</span>
+          <a class="catalog-item-button-detail" href="">Подробнее</a>
           <a class="catalog-item-button" href="">Забронировать</a>
           <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
           <span class="catalog-item-rating">Рейтинг: 8,5</span>
         </li>
         <li class="catalog-item">
           <a href="">
-            <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
+            <img class="catalog-item-img" src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
           </a>
-          <h3>Desert Quail Inn</h3>
+          <h3 class="catalog-item-title">Desert Quail Inn</h3>
           <span class="catalog-category">Мотель</span>
           <span class="catalog-price">От 3000 р.</span>
-          <a class="catalog-button" href="">Подробнее</a>
-          <a class="catalog-btn" href="">Забронировать</a>
-          <img src="img/star.svg" width="18" height="17">
-          <span class="catalog-top">Рейтинг: 8,9</span>
+          <a class="catalog-button-detail" href="">Подробнее</a>
+          <a class="catalog-item-button" href="">Забронировать</a>
+          <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+          <span class="catalog-item-rating">Рейтинг: 8,9</span>
         </li>
         <li class="catalog-item">
         <a href="">
-            <img src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+            <img class="catalog-item-img" src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
           </a>
-          <h3>Villas at Poco Diablo</h3>
+          <h3 class="catalog-item-title">Villas at Poco Diablo</h3>
           <span class="catalog-category">Апартаменты</span>
           <span class="catalog-price">От 2000 р.</span>
-          <a class="catalog-button" href="">Подробнее</a>
-          <a class="catalog-btn" href="">Забронировать</a>
-          <img src="img/star.svg" width="18" height="17">
-          <span class="catalog-top">Рейтинг: 9,2</span>
+          <a class="catalog-button-detail" href="">Подробнее</a>
+          <a class="catalog-item-button" href="">Забронировать</a>
+          <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+          <span class="catalog-item-rating">Рейтинг: 9,2</span>
         </li>
       </ul>
     </section>
