Задание на проверку

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo> href="">
+      <a class="main-header-logo">
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
       <ul class="header-navigation">
-        <li><a href="info.html">Информация</a></li>
+        <li class="info-current">Информация</li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
         <li><a href="catalog.html">Гостиницы</a></li>
