--- a/catalog.html
+++ b/catalog.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>HTML Academy:Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
-  <link href="./css/normalize.css" rel="stylesheet">
-  <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
+  <link href="./normalize.css/normalize.css" rel="stylesheet">
 </head>
-<body>
+<body class="inner-page">
   <header class="main-header">
     <nav class="main-navigation">
       <a class="header-logo-menu">
@@ -17,7 +17,7 @@
         <li><a class="header-navigation-info" href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
-        <li><a class="hotel-current">Гостиницы</a></li>
+        <li class="hotel-current">Гостиницы</li>
       </ul>
     </nav>
   </header>
@@ -41,7 +41,6 @@
               <input type="checkbox" id="wi-fi" name="wi-fi">
             </li>
           </ul>
-          <h2 class="visually-hidden">Фильтр отелей</h2>
           <legend class="filter-title">Тип жилья:</legend>
           <ul>
             <li class="filter-hotel">
