--- a/catalog.html
+++ b/catalog.html
@@ -7,14 +7,14 @@
   <link href="./css/index.css" rel="stylesheet">
   <link href="./normalize.css/normalize.css" rel="stylesheet">
 </head>
-<body class="inner-page">
+<body>
   <header class="main-header">
     <nav class="main-navigation">
       <a class="header-logo-menu">
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
       <ul class="header-navigation">
-        <li><a class="header-navigation-info" href="info.html">Информация</a></li>
+        <li><a class="header-navigation-info" href="index.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
         <li class="hotel-current">Гостиницы</li>
