--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy:Седона</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
-  <link href="./css/index.css" rel="stylesheet">
-  <link href="./normalize.css/normalize.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+  <div class="wrapper">
   <header class="main-header">
     <nav class="main-navigation">
       <a class="header-logo-menu">
@@ -17,12 +18,12 @@
         <li><a class="header-navigation-info" href="index.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
-        <li class="hotel-current">Гостиницы</li>
+        <li class="info-current">Гостиницы</li>
       </ul>
     </nav>
   </header>
   <main class="container">
-    <section class="filtre">
+    <section class="filter">
       <h2 class="visually-hidden">Фильтр отелей</h2>
       <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
@@ -67,15 +68,15 @@
         <li class="sort-item">
           <span class="sort-item-current">По цене</span>
         </li>
-        <li class="sort-item">
-          <span>По типу</span>
+        <li class="sort-item-dotted">
+          <a href="">По типу</a>
         </li>
-        <li class="sort-item">
-          <span>По рейтингу</span>
+        <li class="sort-item-dotted">
+          <a href="">По рейтингу</a>
         </li>
         <li>
-          <img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10">
-          <img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10">
+          <a href=""><img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10"></a>
+          <a href=""><img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10"></a>
         </li>
       </ul>
     </section>
@@ -86,59 +87,76 @@
           <a href="">
             <img class="catalog-item-img" src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
           </a>
-          <h3 class="catalog-item-title" Amara Resort & spa</h3>
-          <span class="catalog-item-type"> Гостиница</span>
-          <span class="catalog-item-price">От 4000 р.</span>
-          <a class="catalog-item-button-detail" href="">Подробнее</a>
-          <a class="catalog-item-button" href="">Забронировать</a>
-          <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
-          <span class="catalog-item-rating">Рейтинг: 8,5</span>
+          <div class="catalog-item-block">
+            <h3 class="catalog-item-title">Amara Resort & spa</h3>
+            <span class="catalog-item-type">Гостиница</span>
+            <span class="catalog-item-price">От 4000 р.</span>
+            <a class="catalog-item-button-detail" href="">Подробнее</a>
+            <a class="catalog-item-button" href="">Забронировать</a>
+          </div>
+          <div class="catalog-item-block">
+            <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+            <span class="catalog-item-rating">Рейтинг: 8,5</span>
+          </div>
         </li>
         <li class="catalog-item">
           <a href="">
             <img class="catalog-item-img" src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
           </a>
-          <h3 class="catalog-item-title">Desert Quail Inn</h3>
-          <span class="catalog-category">Мотель</span>
-          <span class="catalog-price">От 3000 р.</span>
-          <a class="catalog-button-detail" href="">Подробнее</a>
-          <a class="catalog-item-button" href="">Забронировать</a>
-          <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
-          <span class="catalog-item-rating">Рейтинг: 8,9</span>
+          <div class="catalog-item-block">
+            <h3 class="catalog-item-title">Desert Quail Inn</h3>
+            <span class="catalog-category">Мотель</span>
+            <span class="catalog-price">От 3000 р.</span>
+            <a class="catalog-item-button-detail" href="">Подробнее</a>
+            <a class="catalog-item-button" href="">Забронировать</a>
+          </div>
+          <div>
+            <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+            <span class="catalog-item-rating">Рейтинг: 8,9</span>
+          </div>
         </li>
         <li class="catalog-item">
         <a href="">
             <img class="catalog-item-img" src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
           </a>
-          <h3 class="catalog-item-title">Villas at Poco Diablo</h3>
-          <span class="catalog-category">Апартаменты</span>
-          <span class="catalog-price">От 2000 р.</span>
-          <a class="catalog-button-detail" href="">Подробнее</a>
-          <a class="catalog-item-button" href="">Забронировать</a>
-          <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
-          <span class="catalog-item-rating">Рейтинг: 9,2</span>
+          <div class="catalog-item-block">
+            <h3 class="catalog-item-title">Villas at Poco Diablo</h3>
+            <span class="catalog-category">Апартаменты</span>
+            <span class="catalog-price">От 2000 р.</span>
+            <a class="catalog-item-button-detail" href="">Подробнее</a>
+            <a class="catalog-item-button" href="">Забронировать</a>
+          </div>
+          <div>
+            <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+            <span class="catalog-item-rating">Рейтинг: 9,2</span>
+          </div>
         </li>
       </ul>
     </section>
   </main>
   <footer class="main-footer">
-    <p class="footer-hashtag">#Visitsedona</p>
-    <p class="footer-phone">Тел:
-      <a href="tel:+74956660266">+7(495)666-02-66</a>
-    </p>
-    <div class="footer-social">
-      <ul>
+    <div>
+      <p class="footer-text footer-hashtag">#Visitsedona</p>
+      <p class="footer-text footer-phone">Тел:
+        <a href="tel:+74956660266">+7(495)666-02-66</a>
+      </p>
+    </div>
+    <div>
+      <ul class="footer-social">
         <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
         <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
         <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
-    <p>
-    <span class="footer-copyright">Website by</span>
-      <a class="footer-copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-      </a>
-    </p>
+    <div>
+      <p>
+        <span class="footer-copyright">Website by</span>
+        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+        </a>
+      </p>
+    </div>
+   </div>
   </footer>
 </body>
 </html>
