--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy:Седона</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
-  <link href="./css/index.css" rel="stylesheet">
-  <link href="./normalize.css/normalize.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+  <div class="wrapper">
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
@@ -17,7 +18,7 @@
         <li class="info-current">Информация</li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
-        <li><a href="catalog.html">Гостиницы</a></li>
+        <li><a class="catalog" href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -27,16 +28,16 @@
     </section>
     <article class="about">
       <h2 class="about-title-slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class = "about-title-text">Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
+      <p class="about-title-text">Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
       <section class="about-reason">
         <h2 class="visually-hidden">Список причин</h2>
         <ol class="reason-list">
           <li class="reason-item">
-            <h3>
-              <span class="reason-item-title">Настоящий городок</span>
-            </h3>
-            <span class="reason-item-number">- №1 -</span>
-            <p class="reason-item-text">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
+            <div class="reason-item-blue">
+              <h3 class="reason-content-item-title">Настоящий городок</h3>
+              <span class="reason-item-number">- №1 -</span>
+              <p class="reason-item-text">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
+            </div>
             <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
           <li>
@@ -63,30 +64,24 @@
           </li>
           <li class="reasons-item">
             <img class="reason-item-image" src="img/mount.jpg" width="800" height="256" alt="Фото Моста Дьявола">
-            <h3>
-              <p class="reason-item-title">Там есть<br>мост дьявола</p>
-            </h3>
-            <span class="reason-item-number">- №2 -</span>
-            <p class="reason-item-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            <div class="reason-item-blue">
+              <h3 class="reason-content-item-title"> Там есть<br>мост дьявола</p></h3>
+              <span class="reason-item-number">- №2 -</span>
+              <p class="reason-item-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            </div>
           </li>
           <li class="reasons-item">
-            <h3>
-              <p class="reason-item-title">Небольшая площадь</p>
-            </h3>
+            <h3 class="reason-content-item-title">Небольшая площадь</h3>
             <span class="reason-item-number">- №3 -</span>
             <p class="reason-item-text">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="reasons-item">
-            <h3>
-              <span class="reason-item-title">Красивая дорога</span>
-            </h3>
+            <h3 class="reason-content-item-title">Красивая дорога</h3>
             <span class="reason-item-number">- №4 -</span>
             <p class="reason-item-text">Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="reasons-item">
-            <h3>
-              <span class="reason-item-title">Мало туристов</span>
-            </h3>
+            <h3 class="reason-content-item-title">Мало туристов</h3>
             <span class="reason-item-number">- №5 -</span>
             <p class="reason-item-text">Большинство едет в Гранд Коньон и толпится там</p>
           </li>
@@ -96,7 +91,7 @@
     <section class="order-question">
       <h2 class="order-question-title">Заинтересовались?</h2>
       <p class="order-question-text">Укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостиниц в Седоне</p>
-      <button class="order-question-bottom" type="submit">Поиск гостиницы в Седоне</button>
+      <button class="order-question-bottom" type="button">Поиск гостиницы в Седоне</button>
     </section>
     <section class="order">
       <h2 class="visually-hidden">Забронировать отель</h2>
@@ -122,28 +117,33 @@
           <input class="order-count-value" type="number" id="child" value="0">
           <button class="order-botton-edit" type="button">+</button>
         </div>
-        <button class="oreder-button" type="submit">Найти</button>
+        <button class="order-button" type="submit">Найти</button>
       </form>
     </section>
   </main>
   <footer class="main-footer">
-    <p class="footer-hashtag">#Visitsedona</p>
-    <p class="footer-phone">Тел:
-      <a href="tel:+74956660266">+7(495)666-02-66</a>
-    </p>
-    <div class="footer-social">
-      <ul>
+    <div>
+      <p class="footer-text footer-hashtag">#Visitsedona</p>
+      <p class="footer-text footer-phone">Тел:
+        <a href="tel:+74956660266">+7(495)666-02-66</a>
+      </p>
+    </div>
+    <div>
+      <ul class="footer-social">
         <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
         <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
         <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
-    <p>
-    <span class="footer-copyright">Website by</span>
-      <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-      </a>
-    </p>
+    <div>
+      <p>
+        <span class="footer-copyright">Website by</span>
+        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+        </a>
+      </p>
+    </div>
+   </div>
   </footer>
 </body>
 </html>
