Вторая часть задания по базовой стилизации

--- a/index.html
+++ b/index.html
@@ -45,19 +45,25 @@
               <ul class="reason-content-list">
                 <h2 class="visually-hidden">Сервис Седоны</h2>
                 <li class="reason-content-item">
-                  <img class="reason-content-item-icon" src="img/icon-1.svg" width="75" height="76" alt="Жилье">
-                  <span class="reason-content-item-title">Жилье</span>
-                  <p class="reason-content-item-text">Всегда можно пожить в настоящем мотеле, все как в кино!</p>
+                  <div class="reason-item-white">
+                    <img class="reason-content-item-icon" src="img/icon-1.svg" width="75" height="76" alt="Жилье">
+                    <span class="reason-content-item-title">Жилье</span>
+                    <p class="reason-content-item-text">Всегда можно пожить в настоящем мотеле, все как в кино!</p>
+                  </div>
                 </li>
                 <li class="reasons-content-item">
-                  <img class="reason-content-item-icon" src="img/icon-2.svg" width="77" height="70" alt="Еда">
-                  <span class="reason-content-item-title">Еда</span>
-                  <p class="reason-content-item-text">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                  <div class="reason-item-white">
+                    <img class="reason-content-item-icon" src="img/icon-2.svg" width="77" height="70" alt="Еда">
+                    <span class="reason-content-item-title">Еда</span>
+                    <p class="reason-content-item-text">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                  </div>
                 </li>
                 <li class="reason-content-item">
-                  <img class="reason-content-item-icon" src="img/icon-3.svg" width="64" height="76" alt="Сувениры">
-                  <span class="reason-content-item-title">Сувениры</span>
-                  <p class="reason-content-item-text">Не только китайского, но и местного производства</p>
+                  <div class="reason-item-white">
+                    <img class="reason-content-item-icon" src="img/icon-3.svg" width="64" height="76" alt="Сувениры">
+                    <span class="reason-content-item-title">Сувениры</span>
+                    <p class="reason-content-item-text">Не только китайского, но и местного производства</p>
+                  </div>
                 </li>
               </ul>
             </div>
