--- a/catalog.html
+++ b/catalog.html
@@ -27,37 +27,44 @@
       <h2 class="visually-hidden">Фильтр отелей</h2>
       <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
-          <legend class="filter-title">Инфраструктура:</legend>
-          <ul class="filter-list">
-            <li class="filter-item">
-              <label class="filter-item-title" for="basin">Бассейн</label>
-              <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
-            </li>
-            <li class="filter-item">
-              <label for="parking">Парковка></label>
-              <input type="checkbox" id="parking" name="parking">
-            </li>
-            <li class="filter-item">
-              <label for="wi-fi">WI-FI</label>
-              <input type="checkbox" id="wi-fi" name="wi-fi">
-            </li>
-          </ul>
-          <legend class="filter-title">Тип жилья:</legend>
-          <ul>
-            <li class="filter-hotel">
-              <label for="hotel">Гостиница</label>
-              <input type="checkbox" id="hotel" name="hotel" checked>
-            </li>
-            <li class="filter-hotel">
-              <label for="motel">Мотель</label>
-              <input type="checkbox" id="motel" name="motel" checked>
-            </li>
-            <li class="filter-hotel">
-              <label for="apartment">Аппартаменты</label>
-              <input type="checkbox" id="apartment" name="apartment" checked>
-            </li>
-          </ul>
-          <button class="filter-button" type="submit">Показать</button>
+          <div>
+            <legend class="filter-title">Инфраструктура:</legend>
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="filter-item-title" for="basin">Бассейн</label>
+                <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
+              </li>
+              <li class="filter-item">
+                <label for="parking">Парковка></label>
+                <input type="checkbox" id="parking" name="parking">
+              </li>
+              <li class="filter-item">
+                <label for="wi-fi">WI-FI</label>
+                <input type="checkbox" id="wi-fi" name="wi-fi">
+              </li>
+            </ul>
+          </div>
+          <div>
+            <legend class="filter-title">Тип жилья:</legend>
+            <ul class="filter-list">
+              <li class="filter-hotel">
+                <label for="hotel">Гостиница</label>
+                <input type="checkbox" id="hotel" name="hotel" checked>
+              </li>
+              <li class="filter-hotel">
+                <label for="motel">Мотель</label>
+                <input type="checkbox" id="motel" name="motel" checked>
+              </li>
+              <li class="filter-hotel">
+                <label for="apartment">Аппартаменты</label>
+                <input type="checkbox" id="apartment" name="apartment" checked>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <legend class="filter-title">Стоимость услуги в сутки (Р):</legend>
+            <button class="filter-button" type="submit">Показать</button>
+          </div>
         </fieldset>
       </form>
     </section>
