--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
       <h2 class="visually-hidden">Фильтр отелей</h2>
       <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
-          <div>
+          <div class="filter-column1">
             <legend class="filter-title">Инфраструктура:</legend>
             <ul class="filter-list">
               <li class="filter-item">
@@ -44,7 +44,7 @@
               </li>
             </ul>
           </div>
-          <div>
+          <div class="filter-column2">
             <legend class="filter-title">Тип жилья:</legend>
             <ul class="filter-list">
               <li class="filter-hotel">
@@ -61,7 +61,7 @@
               </li>
             </ul>
           </div>
-          <div>
+          <div class="filter-column3">
             <legend class="filter-title">Стоимость услуги в сутки (Р):</legend>
             <button class="filter-button" type="submit">Показать</button>
           </div>
