--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="wrapper">
+    <div class="wrapper wrapper-header-color">
       <nav class="main-navigation">
         <a class="main-header-logo">
           <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
@@ -25,7 +25,9 @@
   </header>
   <main class="container">
     <section class="main-title">
-      <img class="main-title-image" src="img/intro-welcome.svg" width="1200" height="553" alt="Заставка Седоны">
+      <div class="wrapper">
+        <img src="img/intro-welcome.svg" width="1200" height="553" alt="Заставка Седоны">
+      </div>
     </section>
     <article class="about">
       <div class="box-title">
@@ -135,24 +137,26 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="container">
-      <div class="footer-contacts">
-        <p class="footer-text footer-hashtag">#Visitsedona</p>
-        <p class="footer-text footer-phone">Тел:
+    <div class="wrapper">
+      <div class="container">
+        <div class="footer-contacts">
+          <p class="footer-text footer-hashtag">#Visitsedona</p>
+          <p class="footer-text footer-phone">Тел:
           <a href="tel:+74956660266">+7(495)666-02-66</a>
+          </p>
+        </div>
+        <ul class="footer-social">
+          <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+          <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+          <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+        </ul>
+        <p>
+          <span class="footer-copyright">Website by</span>
+          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+          </a>
         </p>
       </div>
-      <ul class="footer-social">
-        <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-        <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-        <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
-      </ul>
-      <p>
-        <span class="footer-copyright">Website by</span>
-        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-        </a>
-      </p>
     </div>
   </footer>
 </body>
