--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
     </div>
   </header>
   <main class="container">
+    <div class="wrapper wrapper-header-color">
     <section class="main-title">
-      <div class="wrapper">
-        <img src="img/intro-welcome.svg" width="1200" height="553" alt="Заставка Седоны">
-      </div>
+      <img src="img/intro-welcome.svg" width="1200" height="553" alt="Заставка Седоны">
     </section>
     <article class="about">
       <div class="box-title">
@@ -135,27 +134,32 @@
         </form>
       </div>
     </section>
+  </div>
   </main>
   <footer class="main-footer">
-    <div class="wrapper">
-      <div class="container">
+    <div class="wrapper wrapper-header-color">
+      <div class="footer-container">
         <div class="footer-contacts">
           <p class="footer-text footer-hashtag">#Visitsedona</p>
           <p class="footer-text footer-phone">Тел:
-          <a href="tel:+74956660266">+7(495)666-02-66</a>
+            <a href="tel:+74956660266">+7(495)666-02-66</a>
           </p>
         </div>
-        <ul class="footer-social">
-          <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-          <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-          <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
-        </ul>
-        <p>
-          <span class="footer-copyright">Website by</span>
-          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-          </a>
-        </p>
+        <div class="container">
+          <ul class="footer-social">
+            <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+            <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+            <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+          </ul>
+        </div>
+        <div class="container">
+          <p>
+            <span class="footer-copyright">Website by</span>
+            <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+            </a>
+          </p>
+        </div>
       </div>
     </div>
   </footer>
