--- a/catalog.html
+++ b/catalog.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="wrapper">
+    <div class="wrapper wrapper-header-color">
       <nav class="main-navigation">
         <a class="main-header-logo">
           <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
         </a>
         <ul class="header-navigation">
-          <li class="info-current">Информация</li>
+          <li><a class="header-navigation-info" href="index.html">Информация</a></li>
           <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
-          <li><a class="catalog" href="catalog.html">Гостиницы</a></li>
+          <li><a class="info-current">Гостиницы</a></li>
         </ul>
       </nav>
     </div>
@@ -28,88 +28,99 @@
       <h2 class="visually-hidden">Фильтр отелей</h2>
       <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
-          <div class="filter-column1">
-            <legend class="filter-title">Инфраструктура:</legend>
-            <ul class="filter-list">
-              <li class="filter-item">
-                <label class="filter-item-title" for="basin">Бассейн</label>
-                <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
-              </li>
-              <li class="filter-item">
-                <label for="parking">Парковка></label>
-                <input type="checkbox" id="parking" name="parking">
-              </li>
-              <li class="filter-item">
-                <label for="wi-fi">WI-FI</label>
-                <input type="checkbox" id="wi-fi" name="wi-fi">
-              </li>
-            </ul>
-          </div>
-          <div class="filter-column2">
-            <legend class="filter-title">Тип жилья:</legend>
-            <ul class="filter-list">
-              <li class="filter-hotel">
-                <label for="hotel">Гостиница</label>
-                <input type="checkbox" id="hotel" name="hotel" checked>
-              </li>
-              <li class="filter-hotel">
-                <label for="motel">Мотель</label>
-                <input type="checkbox" id="motel" name="motel" checked>
-              </li>
-              <li class="filter-hotel">
-                <label for="apartment">Аппартаменты</label>
-                <input type="checkbox" id="apartment" name="apartment" checked>
-              </li>
-            </ul>
-          </div>
-          <div class="filter-column3">
-            <legend class="filter-title">Стоимость услуги в сутки (Р):</legend>
-            <button class="filter-button" type="submit">Показать</button>
+          <div class="filter-columns">
+            <div class="filter-column1">
+              <legend class="filter-title">Инфраструктура:</legend>
+              <ul class="filter-list">
+                <li class="filter-item">
+                  <label class="filter-item-title" for="basin">Бассейн</label>
+                  <input class="filter-item-value" type="checkbox" id="basin" name="basin" checked>
+                </li>
+                <li class="filter-item">
+                  <label for="parking">Парковка></label>
+                  <input type="checkbox" id="parking" name="parking">
+                </li>
+                <li class="filter-item">
+                  <label for="wi-fi">WI-FI</label>
+                  <input type="checkbox" id="wi-fi" name="wi-fi">
+                </li>
+              </ul>
+            </div>
+            <div class="filter-column2">
+              <legend class="filter-title">Тип жилья:</legend>
+              <ul class="filter-list">
+                <li class="filter-hotel">
+                  <label for="hotel">Гостиница</label>
+                  <input type="checkbox" id="hotel" name="hotel" checked>
+                </li>
+                <li class="filter-hotel">
+                  <label for="motel">Мотель</label>
+                  <input type="checkbox" id="motel" name="motel" checked>
+                </li>
+                <li class="filter-hotel">
+                  <label for="apartment">Аппартаменты</label>
+                  <input type="checkbox" id="apartment" name="apartment" checked>
+                </li>
+              </ul>
+            </div>
+            <div class="filter-column3">
+              <legend class="filter-title">Стоимость услуги в сутки (Р):</legend>
+              <button class="filter-button" type="submit">Показать</button>
+            </div>
           </div>
         </fieldset>
       </form>
     </section>
-    <section class="result">
-        <h3 class="result-count">Найдено: 3</h3>
-        <span class="result-sort">Сортировка:</span>
-        <ul class="sort-list">
-          <li class="sort-item">
-            <span class="sort-item-current">По цене</span>
-          </li>
-          <li class="sort-item-dotted">
-            <a href="">По типу</a>
-          </li>
-          <li class="sort-item-dotted">
-            <a href="">По рейтингу</a>
-          </li>
-          <li>
-            <div class="item-icon">
-              <a href=""><img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10"></a>
-              <a href=""><img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10"></a>
-            </div>
-          </li>
-        </ul>
+      <section class="result">
+        <div class="wrapper wrapper-header-color">
+          <div class="container-result"
+            <h3 class="result-count">Найдено: 3</h3>
+            <span class="result-sort">Сортировка:</span>
+            <ul class="sort-list">
+              <li class="sort-item">
+                <span class="sort-item-current">По цене</span>
+              </li>
+              <li class="sort-item-dotted">
+                <a href="">По типу</a>
+              </li>
+              <li class="sort-item-dotted">
+                <a href="">По рейтингу</a>
+              </li>
+              <li>
+                <div class="item-icon">
+                  <a href=""><img class="sort-item-icon" src="img/icon-down-dir.svg" width="11" height="10"></a>
+                  <a href=""><img class="sort-item-icon" src="img/icon-up-dir.svg" width="11" height="10"></a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </div>
     <section class="catalog">
         <h2 class="visually-hidden">Список отелей</h2>
-        <ul class="catalog-list">
-          <li class="catalog-item">
-            <a href="">
-              <img class="catalog-item-img" src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
-            </a>
-            <div class="catalog-item-block">
-            <h3 class="catalog-item-title">Amara Resort & spa</h3>
-            <span class="catalog-item-type">Гостиница</span>
-            <span class="catalog-item-price">От 4000 р.</span>
-            <a class="catalog-item-button-detail" href="">Подробнее</a>
-            <a class="catalog-item-button" href="">Забронировать</a>
-          </div>
-          <div class="catalog-item-block">
-            <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
-            <span class="catalog-item-rating">Рейтинг: 8,5</span>
-          </div>
+        <div class="wrapper wrapper-header-color">
+          <div class="catalog-container">
+            <ul class="catalog-list">
+              <li class="catalog-item">
+                <a href="">
+                  <img class="catalog-item-img" src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+                </a>
+                <div class="catalog-item-block1">
+                  <h3 class="catalog-item-title">Amara Resort & spa</h3>
+                  <span class="catalog-item-type">Гостиница</span>
+                  <span class="catalog-item-price">От 4000 р.</span>
+                  <a class="catalog-item-button-detail" href="">Подробнее</a>
+                  <a class="catalog-item-button" href="">Забронировать</a>
+                </div>
+              </div>
+            <div class="catalog-item-block2">
+              <img class="catalog-item-icon" src="img/star.svg" width="18" height="17">
+              <span class="catalog-item-rating">Рейтинг: 8,5</span>
+            </div>
         </li>
+        </div>
+        <div class="wrapper wrapper-header-color">
         <li class="catalog-item">
           <a href="">
             <img class="catalog-item-img" src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
@@ -126,6 +137,8 @@
             <span class="catalog-item-rating">Рейтинг: 8,9</span>
           </div>
         </li>
+        </div>
+        <div class="wrapper wrapper-header-color">
         <li class="catalog-item">
         <a href="">
             <img class="catalog-item-img" src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
@@ -143,31 +156,31 @@
           </div>
         </li>
       </ul>
+    <div>
     </section>
   </main>
   <footer class="main-footer">
-    <div>
-      <p class="footer-text footer-hashtag">#Visitsedona</p>
-      <p class="footer-text footer-phone">Тел:
-        <a href="tel:+74956660266">+7(495)666-02-66</a>
-      </p>
+    <div class="wrapper wrapper-header-color">
+      <div class="footer-container">
+        <div class="footer-contacts">
+          <p class="footer-text footer-hashtag">#Visitsedona</p>
+          <p class="footer-text footer-phone">Тел:
+            <a href="tel:+74956660266">+7(495)666-02-66</a>
+          </p>
+        </div>
+        <ul class="footer-social">
+          <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+          <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+          <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+        </ul>
+        <p>
+          <span class="footer-copyright">Website by</span>
+          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+          </a>
+        </p>
+      </div>
     </div>
-    <div>
-      <ul class="footer-social">
-        <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-        <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-        <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
-      </ul>
-    </div>
-    <div>
-      <p>
-        <span class="footer-copyright">Website by</span>
-        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-        </a>
-      </p>
-    </div>
-   </div>
   </footer>
-</body>
-</html>
+  </body>
+  </html>
