--- a/catalog.html
+++ b/catalog.html
@@ -172,23 +172,19 @@
               <a href="tel:+74956660266">+7(495)666-02-66</a>
             </p>
           </div>
-          <div class="container">
-            <ul class="footer-social">
-              <li><a class="social-button social-tw" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-              <li><a class="social-button social-fb" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-              <li><a class="social-button social-you" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
-            </ul>
-          </div>
-          <div class="container">
-            <p>
-              <span class="footer-copyright">Website by</span>
-              <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-                <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-              </a>
-            </p>
-          </div>
+          <ul class="footer-social">
+            <li><a class="social-button social-tw" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+            <li><a class="social-button social-fb" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+            <li><a class="social-button social-you" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+          </ul>
         </div>
+        <p class="footer-copyright">
+          Website by
+          <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+          </a>
+        </p>
       </div>
-    </footer>
-  </body>
+      </footer>
+    </body>
   </html>
