--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       </div>
       <section class="about-reason">
         <h2 class="visually-hidden">Список причин</h2>
-        <ol class="reason-list">
+        <ol class="reasons-list">
           <li class="reason-item">
-            <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
             <div class="reason-item-blue">
               <h3 class="reason-content-item-title">Настоящий городок</h3>
               <span class="reason-item-number">- №1 -</span>
               <p class="reason-item-text">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
             </div>
+            <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
           <li>
             <div class="reason-content">
               <h2 class="visually-hidden">Сервис Седоны</h2>
-              <ul class="reason-content-list">
+              <ul class="reasons-content-list">
                 <li class="reason-content-item">
                   <div class="reason-item-white">
                     <img class="reason-content-item-icon" src="img/icon-1.svg" width="75" height="76" alt="Жилье">
@@ -55,7 +55,7 @@
                     <p class="reason-content-item-text">Всегда можно пожить в настоящем мотеле, все как в кино!</p>
                   </div>
                 </li>
-                <li class="reasons-content-item">
+                <li class="reason-content-item">
                   <div class="reason-item-white">
                     <img class="reason-content-item-icon" src="img/icon-3.svg" width="77" height="70" alt="Еда">
                     <span class="reason-content-item-title">Еда</span>
@@ -70,7 +70,7 @@
               </ul>
             </div>
           </li>
-          <li class="reasons-item">
+          <li class="reason-item">
             <img class="reason-item-image" src="img/mount.jpg" width="800" height="256" alt="Фото Моста Дьявола">
             <div class="reason-item-blue">
               <h3 class="reason-content-item-title"> Там есть<br>мост дьявола</p></h3>
@@ -78,21 +78,25 @@
               <p class="reason-item-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
           </li>
-          <li class="reasons-item">
-            <h3 class="reason-content-item-title">Небольшая площадь</h3>
-            <span class="reason-item-number">- №3 -</span>
-            <p class="reason-item-text">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="reasons-item">
-            <h3 class="reason-content-item-title">Красивая дорога</h3>
-            <span class="reason-item-number">- №4 -</span>
-            <p class="reason-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="reasons-item">
-            <h3 class="reason-content-item-title">Мало туристов</h3>
-            <span class="reason-item-number">- №5 -</span>
-            <p class="reason-item-text">Большинство едет в Гранд Коньон и толпится там</p>
-          </li>
+          <div class="reasons-content">
+            <ul class="reasons-content-list">
+              <li class="reason-content-item">
+                <h3 class="reason-content-item-title">Небольшая площадь</h3>
+                <span class="reason-content-item-number">- №3 -</span>
+                <p class="reason-content-item-text">Все достопримечательности находятся очень близко</p>
+              </li>
+              <li class="reason-content-item">
+                <h3 class="reason-content-item-title">Красивая дорога</h3>
+                <span class="reason-content-item-number">- №4 -</span>
+                <p class="reason-content-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="reason-content-item">
+                <h3 class="reason-content-item-title">Мало туристов</h3>
+                <span class="reason-content-item-number">- №5 -</span>
+                <p class="reason-content-item-text">Большинство едет в Гранд Коньон и толпится там</p>
+              </li>
+            </ul>
+          </div>
         </ol>
       </section>
     </article>
@@ -104,7 +108,7 @@
       </div>
       <div class="order-container">
         <h2 class="visually-hidden">Забронировать отель</h2>
-        <img class="order-image" src="img/map.png" width="1200" height="593" alt="Седона на Карте">
+        <img class="order-image" src="img/map.png" width="1200" height="475" alt="Седона на Карте">
       </div>
       <div class="form-container">
         <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
@@ -144,9 +148,9 @@
           </p>
         </div>
         <ul class="footer-social">
-          <li><a class="social-button social-tw" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-          <li><a class="social-button social-fb" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-          <li><a class="social-button social-you" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+          <li><a class="social-button social-tw" href=""></a></li>
+          <li><a class="social-button social-fb" href=""></a></li>
+          <li><a class="social-button social-you" href=""></a></li>
         </ul>
       </div>
       <p class="footer-copyright">
