--- a/index.html
+++ b/index.html
@@ -81,21 +81,27 @@
           <div class="reasons-content">
             <ul class="reasons-content-list">
               <li class="reason-content-item">
-                <h3 class="reason-content-item-title">Небольшая площадь</h3>
-                <span class="reason-content-item-number">- №3 -</span>
-                <p class="reason-content-item-text">Все достопримечательности находятся очень близко</p>
-              </li>
-              <li class="reason-content-item">
-                <h3 class="reason-content-item-title">Красивая дорога</h3>
-                <span class="reason-content-item-number">- №4 -</span>
-                <p class="reason-content-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-              </li>
-              <li class="reason-content-item">
-                <h3 class="reason-content-item-title">Мало туристов</h3>
-                <span class="reason-content-item-number">- №5 -</span>
-                <p class="reason-content-item-text">Большинство едет в Гранд Коньон и толпится там</p>
-              </li>
-            </ul>
+                <div class="reason-item-gray">
+                  <h3 class="reason-content-item-title">Небольшая площадь</h3>
+                  <span class="reason-content-item-number">- №3 -</span>
+                  <p class="reason-content-item-text">Все достопримечательности находятся очень близко</p>
+                </div>
+                </li>
+                <li class="reason-content-item">
+                  <div class="reason-item-gray">
+                    <h3 class="reason-content-item-title">Красивая дорога</h3>
+                    <span class="reason-content-item-number">- №4 -</span>
+                    <p class="reason-content-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                  </div>
+                </li>
+                <li class="reason-content-item">
+                  <div class="reason-item-gray">
+                    <h3 class="reason-content-item-title">Мало туристов</h3>
+                    <span class="reason-content-item-number">- №5 -</span>
+                    <p class="reason-content-item-text">Большинство едет в Гранд Коньон и толпится там</p>
+                  </div>
+                </li>
+              </ul>
           </div>
         </ol>
       </section>
