--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                 <li class="reason-content-item">
                   <div class="reason-item-white">
                     <img class="reason-content-item-icon" src="img/icon-1.svg" width="75" height="76" alt="Жилье">
-                    <span class="reason-content-item-title">Жилье</span>
-                    <p class="reason-content-item-text">Всегда можно пожить в настоящем мотеле, все как в кино!</p>
+                    <span class="reason-content-item-title-white">Жильё</span>
+                    <p class="reason-content-item-text-1">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                   </div>
                 </li>
                 <li class="reason-content-item">
                   <div class="reason-item-white">
                     <img class="reason-content-item-icon" src="img/icon-3.svg" width="77" height="70" alt="Еда">
-                    <span class="reason-content-item-title">Еда</span>
-                    <p class="reason-content-item-text">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                    <span class="reason-content-item-title-white">Еда</span>
+                    <p class="reason-content-item-text-white">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
                   </div>
                 </li>
                 <li class="reason-content-item">
                   <img class="reason-content-item-icon" src="img/icon-2.svg" width="64" height="76" alt="Сувениры">
-                  <span class="reason-content-item-title">Сувениры</span>
-                  <p class="reason-content-item-text">Не только китайского, но и местного производства</p>
+                  <span class="reason-content-item-title-white">Сувениры</span>
+                  <p class="reason-content-item-text-white">Не только китайского, но и местного производства</p>
                 </li>
               </ul>
             </div>
